# clip_layer_rename

./: .editorconfig  Cargo.toml  README.md
resource/: sample.clip
src/: clip.rs  main.rs
