[package]
name = "renamelayer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.29"
regex = "1.5.4"
tempfile = "3.2.0"

[dependencies.rusqlite]
version = "0.25.3"
features = ["bundled"]
